[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Ramesh <mail2.rameshr@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"

# serde_json is just for the example, not required in general
serde_json = "1.0"

[[bin]]
name = "reference_example"
path = "src/reference_example.rs"

[[bin]]
name = "functions_ex"
path = "src/functions.rs"

[[bin]]
name = "closures_ex"
path = "src/closures.rs"

[[bin]]
name = "json_serde"
path = "src/json_serde.rs"

[[bin]]
name = "string_ex"
path = "src/strings.rs"

[[bin]]
name = "sum_nprimes"
path = "src/sum_of_n_primes.rs"
